# pdf-rag

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/services/nodes/: extraction.py  summarizer.py
app/services/prompts/: container.py
app/services/prompts/dicovery/: analyzer.yaml
src/: main.py
src/api/routers/: admin.py  chat.py  upload.py
src/api/schemas/: query.py
src/core/: settings.py
src/infrastructure/: database.py  retrievers.py
src/services/agents/: agent_service.py
src/services/graphs/: document_graph.py
src/services/ingestion/: ingestion_service.py
src/services/nodes/: chabot_node.py  summarizer.py
src/services/prompts/: registry.py
src/services/prompts/nodes/: chatbot.yaml  summarizer.yaml
src/services/prompts/tools/: discovery.yaml  extraction.yaml
src/services/states/: graph_state.py
src/services/tools/: __init__.py  discovery.py  extraction.py
src/shared/schemas/: universal_discovery.py
src/utils/: embedding_factory.py  llm_factory.py  log_wrapper.py  logging_config.py
tests/: conftest.py
tests/api/: __init__.py  test_chat.py  test_main.py  test_upload.py
tests/infrastructure/: test_database.py  test_retrievers.py
tests/services/: __init__.py  test_agent_service.py  test_document_graph.py  test_ingestion_service.py  test_nodes.py  test_registry.py  test_tools.py
tests/utils/: test_factories.py  test_logging.py
ui/: app.py
ui/components/: chat_interface.py  sidebar.py
ui/services/: api_client.py
ui/styles/: custom.css
