[project]
name = "pdf-rag"
version = "0.1.0"
description = "AI-powered document intelligence API with RAG-based analysis, multi-provider LLM support, and a Streamlit chat interface."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Antonio-Jr", email = "antonio.jr.ssouza@gmail.com" },
]
keywords = ["rag", "langchain", "langgraph", "fastapi", "pdf", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg-binary>=3.3.3",
    "pydantic>=2.12.5",
    "pypdf>=6.7.5",
    "python-multipart>=0.0.22",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
]

[project.urls]
Repository = "https://github.com/Antonio-Jr/pdf-rag"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { } }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
